--- a/index.html
+++ b/index.html
@@ -19,12 +19,90 @@
   </head>
   <body>
     <div class="page">
-      Testing . . .
       <header class="header">
+        <nav class="nav">
+
+          <div class="nav__logo">
+            <img class="nav__logo-image" src="./images/logo_coffeeshop_dark.svg">
+          </div>
+
+          <div class="nav__links">
+            <div class="nav__link">Recipes</div>
+            <div class="nav__link">Book a table</div>
+            <div class="nav__link">Menu</div>
+            <div class="nav__link">Contacts</div>
+          </div>
+
+        </nav>
+
+        <h1 class="header__title">
+          <span class="header__span-accent">
+            Specialty coffee
+          </span>
+          in the Triple Peaks Library
+        </h1>
+
+        <p class="header__description">
+          Welcome to our study zone! We've got the coffee to energize you
+          and the cozy vibes to help you get creative.
+        </p>
+
+        <img class="header__image" src="./images/inside_coffee_shop.png">
+
+        <div class="header__footer">
+          <div class="header__footer-left">
+            <p class="header__paragraph">Hours:</p>
+            <p class="header__paragraph">Monday - Friday (10:00 - 19:00)</p>
+            <p class="header__paragraph">Saturday - Sunday (11:00 - 18:00)</p>
+          </div>
+          <div class="header__footer-right">
+            <p class="header__paragraph">200 Success Avenue, The Town of Triple Peaks</p>
+          </div>
+
+        </div>
 
       </header>
+
       <main class="content">
         <section class="recipes">
+          <h2 class="recipes__title">
+            Recipes
+          </h2>
+          <div class="recipes__subtitles">
+            Check out some recipes we've collected for your home-brewing convenience:
+          </div>
+          <div class="recipes__videos">
+            <div class="recipes__iframe">
+              <div class="recipes__video">
+                <iframe
+                  src="https://www.youtube.com/embed/j6VlT_jUVPc?si=A1XmfIOGhRb78L6m"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                >
+                </iframe>
+              </div>
+              <div class="recipes__video-caption">
+                  <p>Aeropress recipe</p>
+                  <p>~5 min</p>
+                </div>
+              <div class="recipes__video">
+                <iframe
+                  src="https://www.youtube.com/embed/st571DYYTR8?si=DH82DtxNpllXk7R8"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                >
+                </iframe>
+              </div>
+              <div class="recipes__video-caption">
+                  <p>French press recipe</p>
+                  <p>~15 min</p>
+                </div>
+            </div>
+           </div>
 
         </section>
         <section class="reservation">
