--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="nav">
 
           <div class="nav__logo">
-            <img class="nav__logo-image" src="./images/logo_coffeeshop_dark.svg">
+            <img class="nav__logo-image" src="./images/logo_coffeeshop_dark.svg" alt="Coffee Shop logo">
           </div>
 
           <div class="nav__links">
@@ -47,7 +47,7 @@
           and the cozy vibes to help you get creative.
         </p>
 
-        <img class="header__image" src="./images/inside_coffee_shop.png">
+        <img class="header__image" src="./images/inside_coffee_shop.png" alt="Inside Coffee Shop View">
 
         <div class="header__footer">
           <div class="header__footer-left">
@@ -64,60 +64,85 @@
       </header>
 
       <main class="content">
+
         <section class="recipes">
+
           <h2 class="recipes__title">
             Recipes
           </h2>
+
           <div class="recipes__subtitles">
             Check out some recipes we've collected for your home-brewing convenience:
           </div>
+
           <div class="recipes__videos">
-            <div class="recipes__iframe">
-              <div class="recipes__video">
+
+            <div class="recipes__video">
+
+              <div class="recipes__iframe">
                 <iframe
+                  class="iframe"
                   src="https://www.youtube.com/embed/j6VlT_jUVPc?si=A1XmfIOGhRb78L6m"
                   title="YouTube video player"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   referrerpolicy="strict-origin-when-cross-origin"
-                  allowfullscreen
-                >
+                  allowfullscreen>
                 </iframe>
               </div>
+
               <div class="recipes__video-caption">
-                  <p>Aeropress recipe</p>
-                  <p>~5 min</p>
-                </div>
-              <div class="recipes__video">
+                <p>Aeropress recipe</p>
+                <p>~5 min</p>
+              </div>
+
+            </div>
+
+            <div class="recipes__video">
+
+              <div class="recipes__iframe">
+
                 <iframe
+                  class="iframe"
                   src="https://www.youtube.com/embed/st571DYYTR8?si=DH82DtxNpllXk7R8"
                   title="YouTube video player"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   referrerpolicy="strict-origin-when-cross-origin"
-                  allowfullscreen
-                >
+                  allowfullscreen>
                 </iframe>
+
               </div>
+
               <div class="recipes__video-caption">
-                  <p>French press recipe</p>
-                  <p>~15 min</p>
-                </div>
+                <p>French press recipe</p>
+                <p>~15 min</p>
+              </div>
+
             </div>
-           </div>
+
+          </div>
 
         </section>
+
         <section class="reservation">
 
         </section>
+
         <section class="menu">
 
         </section>
+
         <section class="about">
 
         </section>
+
       </main>
+
       <footer class="footer">
 
       </footer>
+
     </div>
+
   </body>
+
 </html>
