--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             Recipes
           </h2>
 
-          <div class="recipes__subtitles">
+          <div class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing convenience:
           </div>
 
@@ -79,16 +79,14 @@
 
             <div class="recipes__video">
 
-              <div class="recipes__iframe">
-                <iframe
-                  class="iframe"
-                  src="https://www.youtube.com/embed/j6VlT_jUVPc?si=A1XmfIOGhRb78L6m"
-                  title="YouTube video player"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin"
-                  allowfullscreen>
-                </iframe>
-              </div>
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=A1XmfIOGhRb78L6m"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen>
+              </iframe>
 
               <div class="recipes__video-caption">
                 <p>Aeropress recipe</p>
@@ -99,18 +97,14 @@
 
             <div class="recipes__video">
 
-              <div class="recipes__iframe">
-
-                <iframe
-                  class="iframe"
-                  src="https://www.youtube.com/embed/st571DYYTR8?si=DH82DtxNpllXk7R8"
-                  title="YouTube video player"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin"
-                  allowfullscreen>
-                </iframe>
-
-              </div>
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=DH82DtxNpllXk7R8"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen>
+              </iframe>
 
               <div class="recipes__video-caption">
                 <p>French press recipe</p>
