--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           </div>
 
           <div class="nav__links">
-            <div class="nav__link">Recipes</div>
-            <div class="nav__link">Book a table</div>
-            <div class="nav__link">Menu</div>
-            <div class="nav__link">Contacts</div>
+            <div class="nav__link" href="#recipes">Recipes</div>
+            <div class="nav__link" href="#reservation">Book a table</div>
+            <div class="nav__link" href="#menu">Menu</div>
+            <div class="nav__link" href="#about">Contacts</div>
           </div>
 
         </nav>
