--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           </div>
 
           <div class="nav__links">
-            <div class="nav__link" href="#recipes">Recipes</div>
-            <div class="nav__link" href="#reservation">Book a table</div>
-            <div class="nav__link" href="#menu">Menu</div>
-            <div class="nav__link" href="#about">Contacts</div>
+            <div class="nav__link"><a href="#recipes">Recipes</a></div>
+            <div class="nav__link"><a href="#reservation">Book a table</a></div>
+            <div class="nav__link"><a href="#menu">Menu</a></div>
+            <div class="nav__link"><a href="#about">Contacts</a></div>
           </div>
 
         </nav>
