--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <main class="content">
 
-        <section class="recipes">
+        <section class="recipes" id="recipes">
 
           <h2 class="recipes__title">
             Recipes
@@ -117,15 +117,15 @@
 
         </section>
 
-        <section class="reservation">
+        <section class="reservation" id="reservation">
 
         </section>
 
-        <section class="menu">
+        <section class="menu" id="menu">
 
         </section>
 
-        <section class="about">
+        <section class="about" id="about">
 
         </section>
 
