--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="description" content="A cozy and magical little coffee shop. Great for ordering a Tall Frappuccino">
     <meta name="author" content="Victor Hugo juarez">
     <meta name="keywords" content="coffee, shop, magical">
-    <link rel="stylesheet" href="./vendor/normalize.css">
     <link rel="stylesheet" href="./pages/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -129,7 +128,7 @@
 
         </section>
 
-    <!--- - - - - - - - - - - - - - - - - - - Recipes - - - - - - - - - - - - - - - - - - - - - --->
+    <!--- - - - - - - - - - - - - - - - - - - Reservation - - - - - - - - - - - - - - - - - - - - - --->
 
         <section class="reservation reservation_format" id="reservation">
 
@@ -202,14 +201,97 @@
 
     <!--- - - - - - - - - - - - - - - - - - - Menu - - - - - - - - - - - - - - - - - - - - - --->
 
-        <section class="menu" id="menu">
+        <section class="menu menu_format" id="menu">
+
+          <h2 class="menu__title">Menu</h2>
+
+          <p class="menu__subtitle">We brew coffee from locally roasted,
+            Fairtrade certified beans and use biodegradable cups.
+            All teas from our collection are $2/cup.
+          </p>
+
+          <div class="menu__cards">
+
+            <div class="card">
+
+              <h3 class="card__title">Filter</h3>
+
+              <li class="card__list-item">Regular (12 oz)<span class="card__list-divider"></span>$1.00</li>
+
+              <li class="card__list-item">Large (16 oz)<span class="card__list-divider"></span>$1.25</li>
+
+              <li class="card__list-item">XL (20 oz)<span class="card__list-divider"></span>$1.50</li>
+
+              <li class="card__list-item">Party-size (24 oz, decaf)<span class="card__list-divider"></span>$1.75</li>
+
+              <li class="card__list-item">Iced Coffee (16 oz)<span class="card__list-divider"></span>$1.25</li>
+
+            </div>
+
+            <div class="card">
+
+              <h3 class="card__title">Espresso</h3>
+
+              <li class="card__list-item">Macchiato<span class="card__list-divider"></span>$2.25</li>
+
+              <li class="card__list-item">Cortado<span class="card__list-divider"></span>$2.50</li>
+
+              <li class="card__list-item">Mocha<span class="card__list-divider"></span>$3.00</li>
+
+              <li class="card__list-item">Sunrise in the Bay Area (decaf)<span class="card__list-divider"></span>$10.00</li>
+
+            </div>
+
+            <div class="card">
+
+              <h3 class="card__title">Baked Goods</h3>
+
+              <li class="card__list-item">Almond Croissant<span class="card__list-divider"></span>$2.00</li>
+
+              <li class="card__list-item">Banana Bread<span class="card__list-divider"></span>$1.75</li>
+
+              <li class="card__list-item">Key Lime Pie<span class="card__list-divider"></span>$3.00</li>
+
+              <li class="card__list-item">Blue Velvet Cake<span class="card__list-divider"></span>$3.75</li>
+
+              <li class="card__list-item">Web Cookie<span class="card__list-divider"></span>$2.00</li>
+
+              <li class="card__list-item">Fresh Bug’uette<span class="card__list-divider"></span>$0.25</li>
+
+            </div>
+
+          </div>
+
 
         </section>
 
     <!--- - - - - - - - - - - - - - - - - - - About - - - - - - - - - - - - - - - - - - - - - --->
 
 
-        <section class="about" id="about">
+        <section class="about about_format" id="about">
+
+          <h2 class="about__title">About the coffee shop</h2>
+
+          <div class="about__content">
+
+            <p class="about__paragraph">
+              Our coffee shop is located in the Triple Peaks Library.
+              It features 6 tables and free WiFi.
+            </p>
+
+            <p class="about__paragraph">
+              Our main mission is keeping guests cozy and energized.
+            </p>
+
+            <p class="about__paragraph">
+              Besides that, we try to reduce our environmental impact —
+              so we don't sell single-use cups.
+              But you can buy one of our reusable cups!
+            </p>
+
+          </div>
+
+          <span class="about__circle"></span>
 
         </section>
 
