--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
 
     <!--- - - - - - - - - - - - - - - - - - - Reservation - - - - - - - - - - - - - - - - - - - - - --->
 
-        <section class="reservation reservation--format" id="reservation">
+        <section class="reservation reservation__format" id="reservation">
 
           <h2 class="reservation__title">
             Book a table
           </h2>
 
-          <form class="form">
+          <form class="reservation__form form">
 
             <fieldset class="form__fieldset">
 
@@ -201,7 +201,7 @@
 
     <!--- - - - - - - - - - - - - - - - - - - Menu - - - - - - - - - - - - - - - - - - - - - --->
 
-        <section class="menu menu--format" id="menu">
+        <section class="menu menu__format" id="menu">
 
           <h2 class="menu__title">Menu</h2>
 
