--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <!--- - - - - - - - - - - - - - - - - - - Reservation - - - - - - - - - - - - - - - - - - - - - --->
 
-        <section class="reservation reservation__format" id="reservation">
+        <section class="reservation" id="reservation">
 
           <h2 class="reservation__title">
             Book a table
@@ -201,7 +201,7 @@
 
     <!--- - - - - - - - - - - - - - - - - - - Menu - - - - - - - - - - - - - - - - - - - - - --->
 
-        <section class="menu menu__format" id="menu">
+        <section class="menu" id="menu">
 
           <h2 class="menu__title">Menu</h2>
 
