--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
               <input
                 type="checkbox"
                 class="form__checkbox"
+                required
               >
               <span>I agree with the terms of use</span>
             </label>
@@ -212,9 +213,9 @@
 
           <div class="menu__cards">
 
-            <ol class="card">
+            <h3 class="card__title">Filter</h3>
 
-              <h3 class="card__title">Filter</h3>
+            <ol class="card">
 
               <li class="card__list-item">Regular (12 oz)<span class="card__list-divider"></span>$1.00</li>
 
@@ -228,9 +229,9 @@
 
             </ol>
 
-            <ol class="card">
+            <h3 class="card__title">Espresso</h3>
 
-              <h3 class="card__title">Espresso</h3>
+            <ol class="card">
 
               <li class="card__list-item">Macchiato<span class="card__list-divider"></span>$2.25</li>
 
@@ -242,9 +243,9 @@
 
             </ol>
 
-            <ol class="card">
+            <h3 class="card__title">Baked Goods</h3>
 
-              <h3 class="card__title">Baked Goods</h3>
+            <ol class="card">
 
               <li class="card__list-item">Almond Croissant<span class="card__list-divider"></span>$2.00</li>
 
@@ -305,7 +306,7 @@
 
         <div class="footer__content">
 
-          <img src="./images/logo_coffeeshop_light.svg" class="footer__logo">
+          <img src="./images/logo_coffeeshop_light.svg" class="footer__logo" alt="Coffee Shop Logo">
 
           <div class="footer__social">
 
@@ -317,9 +318,9 @@
 
                 <li class="footer__list-item">
 
-                  <a href="facebook.com" class="footer__social-link">
+                  <a href="https://facebook.com" class="footer__social-link">
 
-                    <img src="./images/facebook_white.svg" class="footer__social-icon">
+                    <img src="./images/facebook_white.svg" class="footer__social-icon" alt="Facebook Logo">
 
                     Facebook
 
@@ -329,9 +330,9 @@
 
                 <li class="footer__list-item">
 
-                  <a href="instagram.com" class="footer__social-link">
+                  <a href="https://instagram.com" class="footer__social-link">
 
-                    <img src="./images/instagram_white.svg" class="footer__social-icon">
+                    <img src="./images/instagram_white.svg" class="footer__social-icon" alt="Instagram Logo">
 
                     Instagram
 
