--- a/index.html
+++ b/index.html
@@ -213,53 +213,65 @@
 
           <div class="menu__cards">
 
-            <h3 class="card__title">Filter</h3>
+            <div class="card">
 
-            <ol class="card">
+              <h3 class="card__title">Filter</h3>
 
-              <li class="card__list-item">Regular (12 oz)<span class="card__list-divider"></span>$1.00</li>
+              <ol class="card__list">
 
-              <li class="card__list-item">Large (16 oz)<span class="card__list-divider"></span>$1.25</li>
+                <li class="card__list-item">Regular (12 oz)<span class="card__list-divider"></span>$1.00</li>
 
-              <li class="card__list-item">XL (20 oz)<span class="card__list-divider"></span>$1.50</li>
+                <li class="card__list-item">Large (16 oz)<span class="card__list-divider"></span>$1.25</li>
 
-              <li class="card__list-item">Party-size (24 oz, decaf)<span class="card__list-divider"></span>$1.75</li>
+                <li class="card__list-item">XL (20 oz)<span class="card__list-divider"></span>$1.50</li>
 
-              <li class="card__list-item">Iced Coffee (16 oz)<span class="card__list-divider"></span>$1.25</li>
+                <li class="card__list-item">Party-size (24 oz, decaf)<span class="card__list-divider"></span>$1.75</li>
 
-            </ol>
+                <li class="card__list-item">Iced Coffee (16 oz)<span class="card__list-divider"></span>$1.25</li>
 
-            <h3 class="card__title">Espresso</h3>
+              </ol>
 
-            <ol class="card">
+            </div>
 
-              <li class="card__list-item">Macchiato<span class="card__list-divider"></span>$2.25</li>
+            <div class="card">
 
-              <li class="card__list-item">Cortado<span class="card__list-divider"></span>$2.50</li>
+              <h3 class="card__title">Espresso</h3>
 
-              <li class="card__list-item">Mocha<span class="card__list-divider"></span>$3.00</li>
+              <ol class="card__list">
 
-              <li class="card__list-item">Sunrise in the Bay Area (decaf)<span class="card__list-divider"></span>$10.00</li>
+                <li class="card__list-item">Macchiato<span class="card__list-divider"></span>$2.25</li>
 
-            </ol>
+                <li class="card__list-item">Cortado<span class="card__list-divider"></span>$2.50</li>
+
+                <li class="card__list-item">Mocha<span class="card__list-divider"></span>$3.00</li>
+
+                <li class="card__list-item">Sunrise in the Bay Area (decaf)<span class="card__list-divider"></span>$10.00</li>
+
+              </ol>
+
+            </div>
+
+            <div class="card">
 
             <h3 class="card__title">Baked Goods</h3>
 
-            <ol class="card">
+              <ol class="card__list">
 
-              <li class="card__list-item">Almond Croissant<span class="card__list-divider"></span>$2.00</li>
+                <li class="card__list-item">Almond Croissant<span class="card__list-divider"></span>$2.00</li>
 
-              <li class="card__list-item">Banana Bread<span class="card__list-divider"></span>$1.75</li>
+                <li class="card__list-item">Banana Bread<span class="card__list-divider"></span>$1.75</li>
 
-              <li class="card__list-item">Key Lime Pie<span class="card__list-divider"></span>$3.00</li>
+                <li class="card__list-item">Key Lime Pie<span class="card__list-divider"></span>$3.00</li>
 
-              <li class="card__list-item">Blue Velvet Cake<span class="card__list-divider"></span>$3.75</li>
+                <li class="card__list-item">Blue Velvet Cake<span class="card__list-divider"></span>$3.75</li>
 
-              <li class="card__list-item">Web Cookie<span class="card__list-divider"></span>$2.00</li>
+                <li class="card__list-item">Web Cookie<span class="card__list-divider"></span>$2.00</li>
 
-              <li class="card__list-item">Fresh Bug’uette<span class="card__list-divider"></span>$0.25</li>
+                <li class="card__list-item">Fresh Bug’uette<span class="card__list-divider"></span>$0.25</li>
 
-            </ol>
+              </ol>
+
+            </div>
 
           </div>
 
